# crossborder-assistant

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  init.sql  pyproject.toml  pytest.ini  requirements.txt  test_models.py  test_qianwen.py
.trae/documents/: shipping_conversation_optimization_plan.md
alembic/: alembic.ini  env.py
bot/: __init__.py  main.py
bot/cogs/: __init__.py  general.py  logistics.py  orders.py  shopping.py
bot/core/: __init__.py  config.py  database.py
bot/services/: __init__.py  shipping_conversation.py
bot/services/ai/: __init__.py  base.py  conversation.py  factory.py  gemini.py  openai.py  prompts.py  qianwen.py  tools.py
bot/services/ecommerce/: __init__.py  base.py  factory.py  formatter.py  jd.py  models.py  taobao.py
bot/services/platform/: __init__.py  category_types.py  client.py  logistics.py  orders.py  shipping_api.py
docs/: deployment.md  user-guide.md
docs/api/: ai-services.md  ecommerce.md  platform.md
docs/outapi/: 商品类型接口文档.md  运费测算接口文档.md
models/: __init__.py  order.py  session.py  user.py
tests/: conftest.py  test_ai_services.py  test_ecommerce_services.py  test_embeds.py  test_interactions.py  test_logistics_service.py  test_orders_service.py  test_platform_client.py  test_shipping_api.py  test_shipping_tools_optimized.py
tests/integration/: __init__.py  test_database.py  test_discord_bot.py
utils/: __init__.py  embeds.py  interactions.py
